--- a/src/main/resources/fxml/General/ReporteDeErrores/ReporteDeErrores.fxml
+++ b/src/main/resources/fxml/General/ReporteDeErrores/ReporteDeErrores.fxml
@@ -9,11 +9,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" fx:id="producton_container" prefHeight="572.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Materiales.ProductoController">
+<AnchorPane prefHeight="575.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.General.ReporteDeErrores.ReporteDeErroresController">
    <children>
-      <AnchorPane prefHeight="575.0" prefWidth="1000.0">
+      <AnchorPane prefHeight="575.0" prefWidth="250.0">
          <children>
-            <Pane layoutX="-2.0" layoutY="-1.0" prefHeight="50.0" prefWidth="250.0">
+            <Pane prefHeight="50.0" prefWidth="250.0">
                <children>
                   <Label layoutX="82.0" layoutY="10.0" text="Búsqueda">
                      <font>
@@ -23,6 +23,7 @@
                   <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="17.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </Pane>
+            <Line endX="100.0" layoutX="118.0" layoutY="49.0" startX="-100.0" />
             <Label layoutX="14.0" layoutY="68.0" prefHeight="21.0" prefWidth="114.0" text="Prioridad">
                <font>
                   <Font size="14.0" />
@@ -33,86 +34,85 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <ComboBox layoutX="128.0" layoutY="66.0" prefHeight="25.0" prefWidth="106.0" />
-            <TextField layoutX="130.0" layoutY="106.0" prefHeight="25.0" prefWidth="106.0" />
-            <TableView layoutX="12.0" layoutY="188.0" prefHeight="202.0" prefWidth="224.0">
+            <ComboBox fx:id="PrioridadError" layoutX="128.0" layoutY="66.0" prefHeight="25.0" prefWidth="106.0" />
+            <TextField fx:id="CodigoError" layoutX="128.0" layoutY="104.0" prefHeight="25.0" prefWidth="106.0" />
+            <Button fx:id="BotonVisualizar" layoutX="140.0" layoutY="522.0" mnemonicParsing="false" onAction="#VisualizarDetalleError" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
+            <TableView fx:id="TablaReporteErrores" layoutX="12.0" layoutY="188.0" prefHeight="202.0" prefWidth="224.0">
                <columns>
-                  <TableColumn prefWidth="65.0" text="Código" />
-                  <TableColumn prefWidth="158.0" text="Descripción" />
+                  <TableColumn fx:id="CodigoTabla" prefWidth="65.0" text="Código" />
+                  <TableColumn fx:id="DescripcionTabla" prefWidth="158.0" text="Descripción" />
                </columns>
             </TableView>
-            <Button layoutX="140.0" layoutY="522.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
-            <AnchorPane layoutX="250.0" layoutY="-1.0" prefHeight="572.0" prefWidth="750.0">
+         </children>
+      </AnchorPane>
+      <AnchorPane fx:id="DetalleErrorPane" layoutX="250.0" layoutY="-1.0" prefHeight="572.0" prefWidth="750.0" visible="false">
+         <children>
+            <Pane prefHeight="50.0" prefWidth="750.0">
                <children>
-                  <Pane layoutY="85.0" prefHeight="491.0" prefWidth="750.0">
+                  <Label layoutX="133.0" layoutY="10.0" text="Detalle del Error">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="51.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
+                  <Line endX="600.0" layoutX="133.0" layoutY="50.0" startX="-100.0" />
+               </children>
+            </Pane>
+            <Pane layoutY="85.0" prefHeight="491.0" prefWidth="750.0">
+               <children>
+                  <Pane prefHeight="233.0" prefWidth="700.0" style="-fx-border-color: black;">
                      <children>
-                        <Pane prefHeight="233.0" prefWidth="700.0" style="-fx-border-color: black;">
-                           <children>
-                              <Label layoutX="14.0" layoutY="14.0" text="Información  General">
-                                 <font>
-                                    <Font size="20.0" />
-                                 </font>
-                              </Label>
-                              <Line endX="100.0" layoutX="115.0" layoutY="44.0" startX="-100.0" />
-                              <Label layoutX="21.0" layoutY="68.0" text="Ocurrido el">
-                                 <font>
-                                    <Font size="14.0" />
-                                 </font>
-                              </Label>
-                              <Label layoutX="21.0" layoutY="119.0" text="Presenciado por">
-                                 <font>
-                                    <Font size="14.0" />
-                                 </font>
-                              </Label>
-                              <TextField layoutX="144.0" layoutY="66.0" prefHeight="25.0" prefWidth="152.0" />
-                              <TextField layoutX="144.0" layoutY="117.0" prefHeight="25.0" prefWidth="152.0" />
-                              <TextField layoutX="141.0" layoutY="164.0" prefHeight="25.0" prefWidth="152.0" />
-                              <Label layoutX="18.0" layoutY="166.0" text="Ordén">
-                                 <font>
-                                    <Font size="14.0" />
-                                 </font>
-                              </Label>
-                              <TextField layoutX="487.0" layoutY="119.0" prefHeight="25.0" prefWidth="152.0" />
-                              <TextField layoutX="487.0" layoutY="68.0" prefHeight="25.0" prefWidth="152.0" />
-                              <Label layoutX="364.0" layoutY="121.0" text="Prioridad asignada">
-                                 <font>
-                                    <Font size="14.0" />
-                                 </font>
-                              </Label>
-                              <Label layoutX="364.0" layoutY="70.0" text="Tipo de error">
-                                 <font>
-                                    <Font size="14.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </Pane>
-                        <Pane layoutY="260.0" prefHeight="202.0" prefWidth="700.0" style="-fx-border-color: black;">
-                           <children>
-                              <Label layoutX="14.0" layoutY="14.0" text="Notas">
-                                 <font>
-                                    <Font size="20.0" />
-                                 </font>
-                              </Label>
-                              <Line endX="100.0" layoutX="115.0" layoutY="44.0" startX="-100.0" />
-                              <TextField layoutX="14.0" layoutY="61.0" prefHeight="118.0" prefWidth="668.0" />
-                           </children>
-                        </Pane>
-                     </children>
-                  </Pane>
-                  <Pane prefHeight="50.0" prefWidth="750.0">
-                     <children>
-                        <Label layoutX="133.0" layoutY="10.0" text="Detalle del Error">
+                        <Label layoutX="14.0" layoutY="14.0" text="Información  General">
                            <font>
                               <Font size="20.0" />
                            </font>
                         </Label>
-                        <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="51.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
-                        <Line endX="600.0" layoutX="133.0" layoutY="50.0" startX="-100.0" />
+                        <Line endX="100.0" layoutX="115.0" layoutY="44.0" startX="-100.0" />
+                        <Label layoutX="21.0" layoutY="68.0" text="Ocurrido el">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="21.0" layoutY="119.0" text="Presenciado por">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField layoutX="144.0" layoutY="66.0" prefHeight="25.0" prefWidth="152.0" />
+                        <TextField layoutX="144.0" layoutY="117.0" prefHeight="25.0" prefWidth="152.0" />
+                        <TextField layoutX="141.0" layoutY="164.0" prefHeight="25.0" prefWidth="152.0" />
+                        <Label layoutX="18.0" layoutY="166.0" text="Ordén">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField layoutX="487.0" layoutY="119.0" prefHeight="25.0" prefWidth="152.0" />
+                        <TextField layoutX="487.0" layoutY="68.0" prefHeight="25.0" prefWidth="152.0" />
+                        <Label layoutX="364.0" layoutY="121.0" text="Prioridad asignada">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="364.0" layoutY="70.0" text="Tipo de error">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </Pane>
+                  <Pane layoutY="260.0" prefHeight="202.0" prefWidth="700.0" style="-fx-border-color: black;">
+                     <children>
+                        <Label layoutX="14.0" layoutY="14.0" text="Notas">
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                        </Label>
+                        <Line endX="100.0" layoutX="115.0" layoutY="44.0" startX="-100.0" />
+                        <TextField layoutX="14.0" layoutY="61.0" prefHeight="118.0" prefWidth="668.0" />
                      </children>
                   </Pane>
                </children>
-            </AnchorPane>
-            <Line endX="100.0" layoutX="118.0" layoutY="49.0" startX="-100.0" />
+            </Pane>
          </children>
       </AnchorPane>
    </children>
