--- a/src/main/resources/fxml/Materiales/Producto/Producto.fxml
+++ b/src/main/resources/fxml/Materiales/Producto/Producto.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
@@ -18,7 +24,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="producton_container" prefHeight="572.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Materiales.ProductoController">
+<AnchorPane id="AnchorPane" fx:id="producton_container" prefHeight="572.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Materiales.ProductoController">
     <children>
         <AnchorPane prefHeight="575.0" prefWidth="1000.0">
            <children>
@@ -37,32 +43,20 @@
                    <Font size="14.0" />
                 </font>
              </Label>
-             <Label layoutX="14.0" layoutY="106.0" prefHeight="21.0" prefWidth="114.0" text="Descripción">
+             <Label layoutX="14.0" layoutY="106.0" prefHeight="21.0" prefWidth="114.0" text="ID de producto">
                 <font>
                    <Font size="14.0" />
                 </font>
              </Label>
-             <Label layoutX="12.0" layoutY="143.0" text="Fecho de ingreso">
-                <font>
-                   <Font size="14.0" />
-                </font>
-             </Label>
-             <TextField layoutX="130.0" layoutY="68.0" prefHeight="25.0" prefWidth="106.0" />
-             <TextField layoutX="130.0" layoutY="106.0" prefHeight="25.0" prefWidth="106.0" />
-             <DatePicker layoutX="130.0" layoutY="140.0" prefHeight="25.0" prefWidth="106.0" />
-             <TableView layoutX="12.0" layoutY="188.0" prefHeight="202.0" prefWidth="224.0">
+             <TextField fx:id="codProd" layoutX="130.0" layoutY="68.0" prefHeight="25.0" prefWidth="106.0" />
+             <TextField fx:id="idProd" layoutX="130.0" layoutY="106.0" prefHeight="25.0" prefWidth="106.0" />
+             <TableView fx:id="tablaProductos" layoutX="12.0" layoutY="222.0" prefHeight="245.0" prefWidth="224.0">
                <columns>
-                 <TableColumn prefWidth="65.0" text="Código" />
-                 <TableColumn prefWidth="158.0" text="Descripción" />
+                 <TableColumn fx:id="codigoProducto" prefWidth="118.0" text="Código de producto" />
+                 <TableColumn fx:id="categoriaProducto" prefWidth="105.0" text="Categoría" />
                </columns>
              </TableView>
-             <Label layoutX="12.0" layoutY="409.0" text="Ubicación" />
-             <Label layoutX="11.0" layoutY="445.0" text="Cantidad en almacen" />
-             <Label layoutX="13.0" layoutY="478.0" text="Disponible para venta" />
-             <TextField layoutX="196.0" layoutY="405.0" prefHeight="21.0" prefWidth="40.0" />
-             <TextField layoutX="196.0" layoutY="441.0" prefHeight="20.0" prefWidth="40.0" />
-             <TextField layoutX="196.0" layoutY="474.0" prefHeight="20.0" prefWidth="40.0" />
-             <Button layoutX="140.0" layoutY="522.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
+             <Button layoutX="140.0" layoutY="522.0" mnemonicParsing="false" onAction="#CargarProductos" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
              <AnchorPane layoutX="250.0" layoutY="-1.0" prefHeight="572.0" prefWidth="750.0">
                 <children>
                    <TabPane layoutY="56.0" prefHeight="522.0" prefWidth="750.0" tabClosingPolicy="UNAVAILABLE">
@@ -71,7 +65,7 @@
                             <content>
                                <AnchorPane prefHeight="200.0" prefWidth="200.0">
                                   <children>
-                                     <Label layoutX="24.0" layoutY="50.0" text="Nombre del producto">
+                                     <Label layoutX="24.0" layoutY="50.0" text="Tipo de producto">
                                         <font>
                                            <Font size="14.0" />
                                         </font>
@@ -116,15 +110,15 @@
                             <content>
                                <AnchorPane prefHeight="200.0" prefWidth="200.0">
                                   <children>
-                                     <Label layoutX="31.0" layoutY="26.0" text="Racks">
+                                     <Label layoutX="31.0" layoutY="26.0" text="Productos">
                                         <font>
                                            <Font size="20.0" />
                                         </font>
                                      </Label>
                                      <TableView layoutX="31.0" layoutY="94.0" prefHeight="289.0" prefWidth="423.0">
                                        <columns>
-                                         <TableColumn prefWidth="151.0" text="Código de Rack" />
-                                         <TableColumn prefWidth="271.0" text="Cantidad disponible" />
+                                         <TableColumn prefWidth="151.0" text="Código de producto" />
+                                         <TableColumn prefWidth="271.0" text="Ubicación" />
                                        </columns>
                                      </TableView>
                                      <TitledPane animated="false" collapsible="false" layoutX="517.0" layoutY="94.0" prefHeight="289.0" prefWidth="177.0" text="Acciones">
@@ -274,6 +268,18 @@
                 </children>
             </AnchorPane>
              <Line endX="100.0" layoutX="118.0" layoutY="49.0" startX="-100.0" />
+            <TextField fx:id="cateProd" layoutX="128.0" layoutY="182.0" prefHeight="25.0" prefWidth="106.0" />
+            <TextField fx:id="tipoProd" layoutX="128.0" layoutY="144.0" prefHeight="25.0" prefWidth="106.0" />
+            <Label layoutX="12.0" layoutY="182.0" prefHeight="21.0" prefWidth="114.0" text="Categoria">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="12.0" layoutY="144.0" prefHeight="21.0" prefWidth="114.0" text="Tipo de producto">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
            </children>
         </AnchorPane>
     </children>
