--- a/src/main/resources/fxml/Ventas/Promociones/Promociones.fxml
+++ b/src/main/resources/fxml/Ventas/Promociones/Promociones.fxml
@@ -76,7 +76,7 @@
                         <Font size="20.0" />
                      </font>
                   </Label>
-                  <Label id="labelNombrePromocion" layoutX="260.0" layoutY="10.0" text="idPromo">
+                  <Label fx:id="labelNombrePromocion" layoutX="260.0" layoutY="10.0" text="idPromo">
                      <font>
                         <Font size="20.0" />
                      </font>
@@ -84,96 +84,114 @@
                </children></AnchorPane>
             <AnchorPane layoutX="33.0" layoutY="83.0" prefHeight="522.0" prefWidth="750.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="50.0">
                <children>
-                  <Label layoutX="14.0" layoutY="30.0" text="Código de Promoción:">
+                  <Label layoutX="27.0" layoutY="30.0" text="Código de promoción:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="14.0" layoutY="67.0" text="Valida entre:">
+                  <TextField fx:id="txtFieCodigoPromo" layoutX="196.0" layoutY="28.0" prefHeight="25.0" prefWidth="104.0" />
+                  <Label layoutX="345.0" layoutY="32.0" text="Válida entre:" />
+                  <DatePicker fx:id="dpFecha1" layoutX="446.0" layoutY="28.0" prefHeight="25.0" prefWidth="89.0" />
+                  <Label layoutX="576.0" layoutY="32.0" text="y" />
+                  <DatePicker fx:id="dpFecha2" layoutX="605.0" layoutY="28.0" prefHeight="25.0" prefWidth="89.0" />
+                  <Label layoutX="27.0" layoutY="67.0" text="Tipo de promoción:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="14.0" layoutY="104.0" text="Tipo de descuento:">
+                  <RadioButton fx:id="rbPorCantidad" layoutX="196.0" layoutY="69.0" mnemonicParsing="false" text="Por Cantidad" />
+                  <RadioButton fx:id="rbPorBonificacion" layoutX="345.0" layoutY="69.0" mnemonicParsing="false" text="Por Bonificación" />
+                  <RadioButton fx:id="rbPorPorcentaje" layoutX="506.0" layoutY="69.0" mnemonicParsing="false" text="Por Porcentaje" />
+                  <Label layoutX="27.0" layoutY="104.0" text="Producto:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <RadioButton layoutX="183.0" layoutY="106.0" mnemonicParsing="false" text="Cant. Producto" />
-                  <RadioButton layoutX="332.0" layoutY="106.0" mnemonicParsing="false" text="Categoria Prod." />
-                  <RadioButton layoutX="488.0" layoutY="106.0" mnemonicParsing="false" text="Porcentual" />
-                  <TextField id="textfieldCodigoPromo" layoutX="201.0" layoutY="28.0" prefHeight="25.0" prefWidth="104.0" />
-                  <DatePicker id="DatePickerSegundaFecha" layoutX="215.0" layoutY="65.0" prefHeight="25.0" prefWidth="89.0" />
-                  <DatePicker id="DatePickerPrimeraFecha" layoutX="103.0" layoutY="65.0" prefHeight="25.0" prefWidth="89.0" />
-                  <Label layoutX="201.0" layoutY="69.0" text="y" />
-                  <Line endX="600.0" layoutX="121.0" layoutY="154.0" startX="-100.0" stroke="#bcaaaa" AnchorPane.leftAnchor="20.5" AnchorPane.topAnchor="153.5" />
-                  <Label layoutX="14.0" layoutY="167.0" text="Compro">
+                  <RadioButton fx:id="rbPorTipo" layoutX="196.0" layoutY="106.0" mnemonicParsing="false" text="Por Tipo" />
+                  <RadioButton fx:id="rbPorCategoria" layoutX="345.0" layoutY="106.0" mnemonicParsing="false" text="Por Categoria" />
+                  <Line endX="600.0" layoutX="124.0" layoutY="140.0" startX="-100.0" stroke="#bcaaaa" />
+                  <Label layoutX="26.0" layoutY="160.0" text="Compro">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Spinner id="SpinnerPrimerObjeto" layoutX="89.0" layoutY="165.0" prefHeight="25.0" prefWidth="67.0" />
-                  <Label layoutX="165.0" layoutY="168.0" prefHeight="20.0" prefWidth="85.0" text="unidades de ">
+                  <Spinner fx:id="spCompro" layoutX="90.0" layoutY="158.0" prefHeight="25.0" prefWidth="80.0" />
+                  <Label layoutX="186.0" layoutY="160.0" prefHeight="20.0" prefWidth="85.0" text="unidades de ">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField layoutX="262.0" layoutY="165.0" prefHeight="25.0" prefWidth="115.0" />
-                  <Button id="ButtonTipoProducto1" layoutX="415.0" layoutY="166.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="80.0" text="Agregar Tipo">
+                  <TextField fx:id="txtFieCodigoProducto1" layoutX="274.0" layoutY="158.0" prefHeight="25.0" prefWidth="200.0" />
+                  <Button fx:id="botonTipo1" layoutX="493.0" layoutY="158.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="104.0" text="Agregar Tipo">
                      <font>
                         <Font size="10.0" />
                      </font>
                   </Button>
-                  <Label layoutX="19.0" layoutY="212.0" text="Y llevo">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <Spinner layoutX="89.0" layoutY="210.0" prefHeight="25.0" prefWidth="67.0" />
-                  <TextField layoutX="155.0" layoutY="313.0" prefHeight="25.0" prefWidth="104.0" />
-                  <Line endX="600.0" layoutX="121.0" layoutY="253.0" startX="-100.0" stroke="#bcaaaa" />
-                  <TextField layoutX="14.0" layoutY="269.0" prefHeight="25.0" prefWidth="60.0" />
-                  <Label layoutX="83.0" layoutY="272.0" text="\% de Descuento en todo">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextField layoutX="245.0" layoutY="270.0" prefHeight="25.0" prefWidth="115.0" />
-                  <Button layoutX="363.0" layoutY="271.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="104.0" text="Agregar Categoría">
+                  <Button fx:id="botonCategoria1" layoutX="620.0" layoutY="158.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="104.0" text="Agregar Categoria">
                      <font>
                         <Font size="10.0" />
                      </font>
                   </Button>
-                  <Label layoutX="14.0" layoutY="316.0" text="P.U. con promoción:">
+                  <Label layoutX="31.0" layoutY="205.0" text="Y llevo">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
+                  <Spinner fx:id="spLlevo" layoutX="90.0" layoutY="201.0" prefHeight="25.0" prefWidth="80.0" />
+                  <Label layoutX="186.0" layoutY="205.0" prefHeight="20.0" prefWidth="85.0" text="unidades de ">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="txtFieCodigoProducto2" layoutX="274.0" layoutY="201.0" prefHeight="25.0" prefWidth="200.0" />
+                  <Button fx:id="botonTipo2" layoutX="493.0" layoutY="201.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="104.0" text="Agregar Tipo">
+                     <font>
+                        <Font size="10.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="botonCategoria2" layoutX="620.0" layoutY="201.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="104.0" text="Agregar Categoria">
+                     <font>
+                        <Font size="10.0" />
+                     </font>
+                  </Button>
+                  <Line endX="600.0" layoutX="124.0" layoutY="243.0" startX="-100.0" stroke="#bcaaaa" />
+                  <Spinner editable="true" layoutX="26.0" layoutY="260.0" prefHeight="25.0" prefWidth="67.0" />
+                  <Label layoutX="110.0" layoutY="262.0" text="\% de Descuento en todo">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="txtFieCodigoProducto3" layoutX="274.0" layoutY="260.0" prefHeight="25.0" prefWidth="200.0" />
+                  <Button fx:id="botonTipo3" layoutX="493.0" layoutY="260.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="104.0" text="Agregar Tipo">
+                     <font>
+                        <Font size="10.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="botonCategoria3" layoutX="620.0" layoutY="260.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="104.0" text="Agregar Categoria">
+                     <font>
+                        <Font size="10.0" />
+                     </font>
+                  </Button>
                   <Line endX="600.0" layoutX="124.0" layoutY="305.0" startX="-100.0" stroke="#bcaaaa" />
-                  <Line endX="600.0" layoutX="124.0" layoutY="347.0" startX="-100.0" stroke="#bcaaaa" />
+                  <Label layoutX="480.0" layoutY="323.0" text="P.U. con promoción:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="txtFiePrecioUnitario" layoutX="620.0" layoutY="319.0" prefHeight="25.0" prefWidth="104.0" />
+                  <Line endX="600.0" layoutX="124.0" layoutY="357.0" startX="-100.0" stroke="#bcaaaa" />
+                  <Label layoutX="14.0" layoutY="380.0" text="Descripción:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <TextField layoutX="100.0" layoutY="380.0" prefHeight="25.0" prefWidth="620.0" />
                   <Label layoutX="14.0" layoutY="427.0" text="Anotaciones:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextArea layoutX="94.0" layoutY="447.0" prefHeight="53.0" prefWidth="629.0" />
-                  <Label layoutX="14.0" layoutY="375.0" text="Descripción:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextField layoutX="94.0" layoutY="370.0" prefHeight="25.0" prefWidth="629.0" />
-                  <TextField layoutX="262.0" layoutY="209.0" prefHeight="25.0" prefWidth="115.0" />
-                  <Label layoutX="165.0" layoutY="213.0" prefHeight="20.0" prefWidth="85.0" text="unidades de ">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <Button layoutX="415.0" layoutY="210.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="80.0" text="Agregar Prod.">
-                     <font>
-                        <Font size="10.0" />
-                     </font>
-                  </Button>
+                  <TextArea layoutX="100.0" layoutY="427.0" prefHeight="53.0" prefWidth="620.0" />
                </children>
             </AnchorPane>
          </children>
